fix for problem with image used as css background not showing up

--- a/app/assets/stylesheets/home.css.scss
+++ b/app/assets/stylesheets/home.css.scss
@@ -620,7 +620,7 @@ div.search {
   left: 20px;
 }
 #bigdiva-logo {
-  background-image: url('/assets/bigdiva-logo-sm.png');
+  background-image: asset-url('/assets/bigdiva-logo-sm.png');
   background-repeat: no-repeat;
   height: 101px;
   width: 80px;
@@ -633,7 +633,7 @@ div.search {
   bottom: 76px;
 }
 #loading-timeline {
-  background-image: url('/assets/loader.gif');
+  background-image: asset-url('/assets/loader.gif');
   background-repeat: no-repeat;
   background-size: 14%;
   background-position: 4px;
